added and configured doorkeeper gem

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div>
-    <%= form.label :user, style: "display: block" %>
-    <%= form.text_field :user %>
+    <%= form.label :user, style: "display: none" %>
+    <%= form.text_field :user, value:current_user.email, style: "display: none" %>
   </div>
 
   <div>
-    <%= form.label :post_date, style: "display: block" %>
-    <%= form.date_field :post_date %>
+    <%= form.label :post_date, style: "display: none" %>
+    <%= form.date_field :post_date, value:Date.today.to_s, style: "display: none" %>
   </div>
 
   <div>
-    <%= form.label :comment, style: "display: block" %>
+    <%= form.label :comment, style: "display: none" %>
     <%= form.text_area :comment %>
   </div>
 
   <div>
-    <%= form.submit, data:{turbo: false} %>
+    <%= form.submit %>
   </div>
 <% end %>
