--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,14 @@
 <% if current_user %>
-    <h1>Welcome " <%= current_user.email %> " to BChainChat</h1>
-    <p>You are signed in as [<%= current_user.role %>]</p>
+    <h1><%= current_user.email %> [<%= current_user.role %>]</h1>
+
     <% if current_user.admin? %>
         Currently there are <%= User.count %> registered users on BChainChat!
+        <br />
+        <%= link_to 'Review Event Submissions', api_v1_posts_path %>
     <% end %>
     <br />
     <br />
-    <%= link_to 'post', posts_path %>
+    <%= link_to 'posts', api_v1_posts_path %>
     <br />
     <br />
     <%= link_to "Sign out", destroy_user_session_path,'data-turbo-method': :delete %>
@@ -18,4 +20,7 @@
         <br/>
         <%= link_to "Sign in", new_user_session_path %>
 <% end %>
+
+<%= @application.as_json %>
+
 
