--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,3 @@
-<p style="color: green"><%= notice %></p>
 
 <h1>Posts</h1>
 
@@ -6,9 +5,15 @@
   <% @posts.each do |post| %>
     <%= render post %>
     <p>
-      <%= link_to "Show this post", post %>
+      <% if current_user.email == post.user %>
+        <div>
+          <%= link_to "Edit Post", edit_post_path(post) %> 
+          <%= button_to "Delete", post, method: :delete %>
+        </div>
+      <% end %>
     </p>
   <% end %>
-</div>
 
-<%= link_to "New post", new_post_path %>
+
+  <%= link_to "New post", new_post_path %>
+</div>
