--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,85 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <h2>Edit Your <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :first_name, style:"display: none;"  %><br />
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder:"First Name"%>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="field">
+      <%= f.label :last_name, style:"display: none;"  %><br />
+      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"Last Name"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :bio, style:"display: none;"  %><br />
+      <%= f.text_area :bio, autofocus: true, autocomplete: "bio", placeholder:"About Yourself "%>
+    </div>
+
+    <div class="field">
+      <%= f.label :age, style:"display: none;"  %><br />
+      <%= f.text_field :age, autofocus: true, autocomplete: "age", placeholder:"Age"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :phone_number, style:"display: none;"  %><br />
+      <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number", placeholder:"Phone no:"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :country, style:"display: none;"  %><br />
+      <%= f.text_field :country, autofocus: true, autocomplete: "country", placeholder:"Country"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :profession, style:"display: none;"  %><br />
+      <%= f.text_field :profession, autofocus: true, autocomplete: "profession", placeholder:"Profession"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :interest, style:"display: none;"  %><br />
+      <%= f.text_area :interest, autofocus: true, autocomplete: "interest", placeholder:"What's your inerest?"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :email, style:"display: none;"  %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :password, style:"display: none;" %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a new password" %>
+      <% if @minimum_password_length %>
+        <br />
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation, style:"display: none;"  %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirm the new password" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :current_password, style:"display: none;"  %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, autocomplete: "current-password", placeholder:"Enter the current password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update" %>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <h3>Cancel my account</h3>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+  <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+  <%= link_to "Back", :back %>
+</div>
