--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,66 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :first_name, style:"display: none;"  %><br />
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder:"First Name"%>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :last_name, style:"display: none;"  %><br />
+      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"Last Name"%>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :age, style:"display: none;"  %><br />
+      <%= f.text_field :age, autofocus: true, autocomplete: "age", placeholder:"Age"%>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up", data:{turbo: false} %>
-  </div>
-<% end %>
+    <div class="field">
+      <%= f.label :phone_number, style:"display: none;"  %><br />
+      <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number", placeholder:"Phone no:"%>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="field">
+      <%= f.label :country, style:"display: none;"  %><br />
+      <%= f.text_field :country, autofocus: true, autocomplete: "country", placeholder:"Country"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :profession, style:"display: none;"  %><br />
+      <%= f.text_field :profession, autofocus: true, autocomplete: "profession", placeholder:"Profession"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :interest, style:"display: none;"  %><br />
+      <%= f.text_area :interest, autofocus: true, autocomplete: "interest", placeholder:"What's your inerest?"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :email, style:"display: none;"  %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :password, style:"display: none;" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a password" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation, style:"display: none;"  %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" , placeholder:"Confirm password"%>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up", data:{turbo: false} %>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+</div>
