--- a/bchainchat-react/src/App.css
+++ b/bchainchat-react/src/App.css
@@ -1,38 +1,36 @@
 .App {
   text-align: center;
+  margin: 2%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3, h4, h5, h6, p, a {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2, h3, h4, h5, h6, a{
+  color: #39023A;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p{
+  color: #000000;
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  background-color: #39023A;
+  color: #ffffff;
+  border: none;
+  padding: 15px 40px;
+  border-radius: 6px;
+  font-weight: 500;
+  transition: all .5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: #ffffff;
+  color: #39023A;
+  border: 3px solid #39023A;
+  transform: scale(1.1);
 }
