--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,42 +6,42 @@
 
     <div class="field">
       <%= f.label :first_name, style:"display: none;"  %><br />
-      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder:"First Name"%>
+      <%= f.text_field :first_name, placeholder:"First Name"%>
     </div>
 
     <div class="field">
       <%= f.label :last_name, style:"display: none;"  %><br />
-      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"Last Name"%>
+      <%= f.text_field :last_name, placeholder:"Last Name"%>
     </div>
 
     <div class="field">
       <%= f.label :bio, style:"display: none;"  %><br />
-      <%= f.text_area :bio, autofocus: true, autocomplete: "bio", placeholder:"About Yourself "%>
+      <%= f.text_area :bio, placeholder:"About Yourself "%>
     </div>
 
     <div class="field">
       <%= f.label :age, style:"display: none;"  %><br />
-      <%= f.text_field :age, autofocus: true, autocomplete: "age", placeholder:"Age"%>
+      <%= f.text_field :age, placeholder:"Age"%>
     </div>
 
     <div class="field">
       <%= f.label :phone_number, style:"display: none;"  %><br />
-      <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number", placeholder:"Phone no:"%>
+      <%= f.text_field :phone_number, placeholder:"Phone no:"%>
     </div>
 
     <div class="field">
       <%= f.label :country, style:"display: none;"  %><br />
-      <%= f.text_field :country, autofocus: true, autocomplete: "country", placeholder:"Country"%>
+      <%= f.text_field :country, placeholder:"Country", value: country_name%>
     </div>
 
     <div class="field">
       <%= f.label :profession, style:"display: none;"  %><br />
-      <%= f.text_field :profession, autofocus: true, autocomplete: "profession", placeholder:"Profession"%>
+      <%= f.text_field :profession, placeholder:"Profession"%>
     </div>
 
     <div class="field">
       <%= f.label :interest, style:"display: none;"  %><br />
-      <%= f.text_area :interest, autofocus: true, autocomplete: "interest", placeholder:"What's your inerest?"%>
+      <%= f.text_area :interest, placeholder:"What's your inerest?"%>
     </div>
 
     <div class="field">
@@ -72,14 +72,19 @@
       <%= f.password_field :current_password, autocomplete: "current-password", placeholder:"Enter the current password" %>
     </div>
 
+    <br />
+
     <div class="actions">
       <%= f.submit "Update" %>
     </div>
   <% end %>
+  <br />
 
   <h3>Cancel my account</h3>
 
   <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+  <br />
 
   <%= link_to "Back", :back %>
 </div>
