Added the carrierwave gem. Configured it to upload images to posts as attachment.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
 
     <div class="field">
       <%= f.label :country, style:"display: none;"  %><br />
-      <%= f.text_field :country, placeholder:"Country", value: country_name%>
+      <%= f.text_field :country, placeholder:"Country" %>
     </div>
 
     <div class="field">
