--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
 
     <div class="field">
       <%= f.label :country, style:"display: none;"  %><br />
-      <%= f.text_field :country, placeholder:"Country", value: country_name%>
+      <%= f.text_field :country, placeholder:"Country"%>
     </div>
 
     <div class="field">
