--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,28 +1,46 @@
-<div class="container">
+<div class="container", style="margin-top: 3%;">
+    
     <% if current_user %>
-        <h3><%= current_user.email %> [<%= current_user.role %>]</h3>
-        <br />
+        <div class="row">
+            <div class="col">
+                <% if current_user.admin? %>
+                    <h3>Currently there are <%= User.count %> registered users on BChainChat!</h3>
+                    <br />
+                    <br />
+                    <%= link_to 'Review Event Submissions' %>
+                <% end %>
+            </div>
+        </div>
 
-        <% if current_user.admin? %>
-            <h3>Currently there are <%= User.count %> registered users on BChainChat!</h3>
-            <br />
-            <br />
-            <%= link_to 'Review Event Submissions' %>
-        <% end %>
-        <br />
-        <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
-        <br />
-        <h5><i><%= current_user.bio %></i></h5>
-        <br />
-        <h5><%= current_user.country %></h5>
-        <br />
-        <br />
-        <%= link_to 'Update Profile', edit_user_registration_path %>
-        <br />
-        <br />
-        <%= link_to 'posts', posts_path %>
-        <br />
-        <br />
+        <div class="row">
+            <div class="col-8 ">
+                <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
+                <br />
+                <h5><%= current_user.email %> [<%= current_user.role %>]</h5>
+                <br />
+                <h5><i><%= current_user.bio %></i></h5>
+                <br />
+                <h5><%= current_user.country %></h5>
+            </div>
 
+            <div class="col-4">
+                <%= link_to 'Attending Events', pages_events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 10%;" %>
+            </div>
+            <div class="col">
+                <%= link_to 'Hosting Events', pages_events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: -5%;" %>
+            </div>
+        </div>
+        <br />
+        <br />
+        <div class="row">
+            <div class="col-8">
+                <%= link_to 'Update Details', edit_user_registration_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none;" %>
+            </div>
+
+            <div class="col ">
+                <%= link_to '+Create Post', new_post_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 20%;" %>
+            </div>
+        </div>
+        <br />
     <% end %>
 </div>
