--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,90 +1,111 @@
-<div class="container">
+<div class="container " style="margin-top: 3%">
   <h2>Edit Your <%= resource_name.to_s.humanize %></h2>
+
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
+      
+    <div class="row">
+      <div class="col-4" >
+        <div class="field">
+          <%= f.label :image, style:"display: none;"  %><br />
+          <%= f.file_field :image %>
+        </div>
 
-    <div class="field">
-      <%= f.label :first_name, style:"display: none;"  %><br />
-      <%= f.text_field :first_name, placeholder:"First Name"%>
-    </div>
+        <div class="field">
+          <%= f.label :bio, style:"display: none;"  %><br />
+          <%= f.text_area :bio, placeholder:"About Yourself "%>
+        </div>
 
-    <div class="field">
-      <%= f.label :last_name, style:"display: none;"  %><br />
-      <%= f.text_field :last_name, placeholder:"Last Name"%>
-    </div>
-
-    <div class="field">
-      <%= f.label :bio, style:"display: none;"  %><br />
-      <%= f.text_area :bio, placeholder:"About Yourself "%>
-    </div>
-
-    <div class="field">
-      <%= f.label :age, style:"display: none;"  %><br />
-      <%= f.text_field :age, placeholder:"Age"%>
-    </div>
-
-    <div class="field">
-      <%= f.label :phone_number, style:"display: none;"  %><br />
-      <%= f.text_field :phone_number, placeholder:"Phone no:"%>
-    </div>
-
-    <div class="field">
-      <%= f.label :country, style:"display: none;"  %><br />
-      <%= f.text_field :country, placeholder:"Country" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :profession, style:"display: none;"  %><br />
-      <%= f.text_field :profession, placeholder:"Profession"%>
-    </div>
-
-    <div class="field">
-      <%= f.label :interest, style:"display: none;"  %><br />
-      <%= f.text_area :interest, placeholder:"What's your inerest?"%>
-    </div>
-
-    <div class="field">
-      <%= f.label :email, style:"display: none;"  %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
-    </div>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :password, style:"display: none;" %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a new password" %>
-      <% if @minimum_password_length %>
         <br />
-        <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
-    </div>
+        <br />
+        <div class="field">
+          <%= f.label :current_password, style:"display: none;"  %> <strong><i style="color: red;">(Enter your current password to save changes)</i></strong><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", placeholder:"Enter the current password" %>
+        </div>
+        <br />
+        <div class="actions">
+          <%= f.submit "Save" %>
+        </div>
+      </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation, style:"display: none;"  %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirm the new password" %>
-    </div>
+      <div class="col-8 update-right-details">
+        <div style="float: left; margin-right: 10%;">
+          <div class="field">
+            <%= f.label :first_name, style:"display: none;"  %><br />
+            <%= f.text_field :first_name, placeholder:"First Name"%>
+          </div>
+        </div>
 
-    <div class="field">
-      <%= f.label :current_password, style:"display: none;"  %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password, autocomplete: "current-password", placeholder:"Enter the current password" %>
-    </div>
+        <div class="field">
+          <%= f.label :last_name, style:"display: none;"  %><br />
+          <%= f.text_field :last_name, placeholder:"Last Name"%>
+        </div>
 
+        <div class="field">
+          <%= f.label :age, style:"display: none;"  %><br />
+          <%= f.text_field :age, placeholder:"Age"%>
+        </div>
+
+        <div style="float: left; margin-right: 10%;">
+          <div class="field">
+            <%= f.label :phone_number, style:"display: none;"  %><br />
+            <%= f.text_field :phone_number, placeholder:"Phone no:"%>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :country, style:"display: none;"  %><br />
+          <%= f.text_field :country, placeholder:"Country" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :email, style:"display: none;"  %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
+        </div>
+
+        <div class="field">
+          <%= f.label :profession, style:"display: none;"  %><br />
+          <%= f.text_field :profession, placeholder:"Profession"%>
+        </div>
+
+        <div class="field">
+          <%= f.label :interest, style:"display: none;"  %><br />
+          <%= f.text_area :interest, placeholder:"What's your inerest?"%>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <br />
+        <div style="float: left">
+          <div class="field">
+            <%= f.label :password, style:"display: none;" %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a new password" %>
+            <% if @minimum_password_length %>
+              <br />
+              <em>minimum <%= @minimum_password_length %> characters</em>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, style:"display: none;"  %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirm the new password" %>
+        </div>
+      </div>
+    </div>
     <br />
-
-    <div class="actions">
-      <%= f.submit "Update" %>
-    </div>
+    <br />
   <% end %>
   <br />
-
-  <h3>Cancel my account</h3>
-
-  <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <br />
-
-  <%= link_to "Back", :back %>
+  <div class="row">
+    <div class="col">
+      <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      <br />
+      <%#= link_to "Back", :back, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none;"%>
+    </div>
+  </div>
+ 
 </div>
