--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,67 +1,76 @@
-<div class="container">
-  <h2>Sign up</h2>
+<div class="container" style="margin-top: 3%">
+  <h3>Sign up</h3>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :first_name, style:"display: none;"  %><br />
-      <%= f.text_field :first_name, placeholder:"First Name"%>
-    </div>
+    <div class="row">
+      <div class="col">
+        <div style="float: left; margin-right: 2%;">
+          <div class="field">
+            <%= f.label :first_name, style:"display: none;"  %><br />
+            <%= f.text_field :first_name, placeholder:"First Name"%>
+          </div>
+        </div>
 
-    <div class="field">
-      <%= f.label :last_name, style:"display: none;"  %><br />
-      <%= f.text_field :last_name, placeholder:"Last Name"%>
-    </div>
+        <div class="field">
+          <%= f.label :last_name, style:"display: none;"  %><br />
+          <%= f.text_field :last_name, placeholder:"Last Name"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :age, style:"display: none;"  %><br />
-      <%= f.text_field :age, placeholder:"Age"%>
-    </div>
+        <div class="field">
+          <%= f.label :age, style:"display: none;"  %><br />
+          <%= f.text_field :age, placeholder:"Age"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :phone_number, style:"display: none;"  %><br />
-      <%= f.text_field :phone_number, placeholder:"Phone no:"%>
-    </div>
+        <div style="float: left; margin-right: 2%;">
+          <div class="field">
+            <%= f.label :phone_number, style:"display: none;"  %><br />
+            <%= f.text_field :phone_number, placeholder:"Phone no:"%>
+          </div>
+        </div>
 
-    <div class="field">
-      <%= f.label :country, style:"display: none;"  %><br />
-      <%= f.text_field :country, placeholder:"Country"%>
-    </div>
+        <div class="field">
+          <%= f.label :country, style:"display: none;"  %><br />
+          <%= f.text_field :country, placeholder:"Country"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :profession, style:"display: none;"  %><br />
-      <%= f.text_field :profession, placeholder:"Profession"%>
-    </div>
+        <div class="field">
+          <%= f.label :profession, style:"display: none;"  %><br />
+          <%= f.text_field :profession, placeholder:"Profession"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :interest, style:"display: none;"  %><br />
-      <%= f.text_area :interest, placeholder:"What's your inerest?"%>
-    </div>
+        <div class="field">
+          <%= f.label :interest, style:"display: none;"  %><br />
+          <%= f.text_area :interest, placeholder:"What's your inerest?"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :email, style:"display: none;"  %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
-    </div>
+        <div class="field">
+          <%= f.label :email, style:"display: none;"  %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"email"%>
+        </div>
 
-    <div class="field">
-      <%= f.label :password, style:"display: none;" %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a password" %>
-    </div>
+        <br />
+        <div class="field">
+          <%= f.label :password, style:"display: none;" %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", placeholder:"Enter a password" %>
+        </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation, style:"display: none;"  %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" , placeholder:"Confirm password"%>
-    </div>
-    <br />
-    <div class="actions">
-      <%= f.submit "Sign up", data:{turbo: false} %>
+        <div class="field ">
+          <%= f.label :password_confirmation, style:"display: none;"  %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" , placeholder:"Confirm password"%>
+        </div>
+        <br />
+        <div class="actions">
+          <%= f.submit "Register", data:{turbo: false}, style: "background-color: #39023A; color: #ffffff; padding: 8px 40px; text-decoration: none;" %>
+        </div>
+      </div>
     </div>
   <% end %>
   <br />
 
-  <%= render "devise/shared/links" %>
+  <%#= render "devise/shared/links",  %>
 </div>
