--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,9 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #39023A; padding: 20px;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
+      <a class="navbar-brand" href="/">
+          <%= image_tag "BChainChat_Logo_white.png", height: 18, width: 120, margin: 0, class:"logo-img"%>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,7 +14,7 @@
           <% if user_signed_in? %>
             <li class="nav-item active ">
               <%= link_to 'User Profile', root_path, class:"nav-link" %>
-              </li>
+            </li>
             <li class="nav-item " >
               <%= link_to 'Timeline', posts_path, class:"nav-link" %>
             </li>
@@ -26,10 +28,10 @@
               <%= link_to "Sign out", destroy_user_session_path,'data-turbo-method': :delete, class:"nav-link" %>
             </li>
             <% else %>
-            <li class="nav-item">
+            <li class="nav-item nav-move">
               <%= link_to "Sign in", new_user_session_path, class:"nav-link" %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item nav-move">
               <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
             </li>
           <% end %>
