--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,13 @@
 <div class="container", style="margin-top: 3%;">
     
     <% if current_user %>
+
+        <% if current_user.image?%>
+            <div >
+                <img class="rounded-circle" src= "<%= current_user.image  %>" style="height: 100px; width: 100px; margin: 0;" >
+            </div>
+        <% end %>
+        
         <div class="row">
             <div class="col">
                 <% if current_user.admin? %>
