--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,31 @@
     <%# Bootstrap links %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <style>
+      <%= ".msg-#{current_user&.id}" %> {
+      background-color: #39023A !important;
+      color: #ffffff;
+      padding: 10px;
+      }
+      <%= ".cont-#{current_user&.id}" %> {
+        display: flex;
+        justify-content: flex-end;
+      }
+    </style>
+  
   </head>
 
   <body>
     <div class="container">
 
-      <% if notice %>
-        <p class="alert alert-success"><%= notice %></p>
-      <% end %>
+      <%# <% if notice %>
+        <%#<p class="alert alert-success"><%= notice %><%#</p>
+      <%# end %>
 
-      <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
+      <%# if alert %>
+        <%#<p class="alert alert-danger"><%= alert %><%#</p>
+      <%# end %>
 
       <%= render "layouts/navbar" %>
       <%= yield %>
