--- a/app/views/user_profiles/profile.html.erb
+++ b/app/views/user_profiles/profile.html.erb
@@ -20,15 +20,19 @@
         </div>
 
         <div class="row">
-        <div class="col-6 ">
-            <strong><h3><%= @user.first_name %> <%= @user.last_name %></h3></strong>
-            <br />
-            <h5><%= @user.email %> </h5>
-            <br />
-            <h5><i><%= @user.bio %></i></h5>
-            <br />
-            <h5><%= @user.country %></h5>
-        </div>
+            <div class="col-6 ">
+                <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
+                <br />
+                <h5><%= current_user.email %> </h5>
+                <br />
+                <h5><i><%= current_user.bio %></i></h5>
+                <br />
+                <h5><%= current_user.country %></h5>
+            </div>
+
+            <div class="col-2">
+                <%= link_to "Messages", dashboards_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;" %>
+            </div>
 
             <div class="col-4">
                 <%= link_to 'Attending Events', events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 10%;" %>
