--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -7,22 +7,22 @@
 
     <div>
       <% if event.image?%>
-        <img src= "<%= event.image %>" style="height: 60vh; width: 120vh; margin: 2%;" >
-        <%= f.file_field :image %>
+        <img src= "<%= event.image %>" style="height: 50vh; width: 60vh; margin: 2%;" ><br />
       <% end %>
+      <%= f.file_field :image %>
     </div>
     <br />
+
     <%= f.input :title %>
     <%= f.input :date %>
     <%= f.input :time %>
     <%= f.input :location %>
+    <%= f.input :description %>
     <%= f.input :limit %>
     <%= f.input :attendees %>
-    <%= f.input :description %>
-    <%= f.input :image %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;"  %>
+    <%= f.button :submit, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;" %>
   </div>
 <% end %>
