--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,12 +1,14 @@
-<div class="container" style="margin-top: 3%;" >
-  <h3>Edit event</h3>
+<div class="container">
+<div class="row">
+    <h1>Editing event</h1>
 
-  <%= render "form", event: @event %>
+    <%= render "form", event: @event %>
 
-  <br>
+    <br>
 
-  <div>
-      <%= link_to "Show this event", @event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;"  %> |
-      <%= link_to "Back to events", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;"  %>
+    <div>
+      <%= link_to "More", @event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;" %> |
+      <%= link_to "Back", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;" %>
+    </div>
   </div>
 </div>
