--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
-  <div class="row">
-    <h1>New event</h1>
+  <div class="row"> 
+    <div class="col">   
+      <h1>New event</h1>
 
-    <%= render "form", event: @event %>
+      <%= render "form", event: @event %>
 
-    <br>
+      <br>
 
-    <div>
-      <%= link_to "Back to events", events_path %>
+      <div>
+        <%= link_to "Back", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
+      </div>
     </div>
   </div>
 </div>
