added RSVP button plus atendees counter

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,6 +43,11 @@
         </div>
 
         <div class="field">
+          <%= f.label :screen_name, style:"display: none;"  %><br />
+          <%= f.text_field :screen_name, placeholder:"Screen Name"%>
+        </div>
+
+        <div class="field">
           <%= f.label :age, style:"display: none;"  %><br />
           <%= f.text_field :age, placeholder:"Age"%>
         </div>
