--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,7 +1,7 @@
 <div id="chatroom_container" class=" row ">
     <div id="side_panel" class="col-md-4 col-sm-4">
     <br />
-        <h5 class="container">User: <%= current_user.first_name %></h5>
+        <h5 class="container">Current user: <%= current_user.screen_name %></h5>
 
         <h5 class="container"> Your Contacts </h5>
         <%= turbo_stream_from "users" %>
@@ -11,10 +11,12 @@
 
         <br />
         <br />
-        <h5 class="container"> Dashboards </h5>
+        <h5 class="container"> Public Groups </h5>
  
         <%= turbo_stream_from "dashboards" %>
-        <%= render 'layouts/new_dashboard_form' %>
+        <% if current_user.admin? %>
+            <%= render 'layouts/new_dashboard_form' %>
+        <% end %>
         <div id="dashboards">
             <%= render @dashboards %>
         </div> 
@@ -23,7 +25,7 @@
     <div id="dashboard_container" class="col-md-8 col-sm-8 ">
         <% if @single_dashboard %>
             <div id="single_room">
-                <h4 class="text-center"> <%= @user&.email || @single_dashboard.name %> </h4>
+                <h4 class="text-center"> <%= @user&.screen_name || @single_dashboard.name %> </h4>
                 <%= turbo_stream_from @single_dashboard %>
                 <div id="messages" data-controller="scroll">
                     <%= render @messages %>
