--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container" style="margin-top: 3%">
+
   <h3>Sign up</h3>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -16,6 +17,11 @@
         <div class="field">
           <%= f.label :last_name, style:"display: none;"  %><br />
           <%= f.text_field :last_name, placeholder:"Last Name"%>
+        </div>
+
+        <div class="field">
+          <%= f.label :screen_name, style:"display: none;"  %><br />
+          <%= f.text_field :screen_name, placeholder:"Screen Name"%>
         </div>
 
         <div class="field">
