--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,13 +11,14 @@
 
         <% if user_signed_in? %>
           <li class="nav-item active ">
-            <%= link_to 'User Profile', user_profiles_profile_path, class:"nav-link" %>
+            <%= link_to 'User Profile', user_profile_path(current_user), class:"nav-link" %>
           </li>
           <li class="nav-item " >
             <%= link_to 'Timeline', posts_path, class:"nav-link" %>
           </li>
           <li class="nav-item " >
-            <%= link_to 'News', news_path,  class:"nav-link" %>
+            <%#= link_to 'News', news_path,  class:"nav-link" %>
+            <%= link_to 'News', 'http://localhost:3001/' %>
           </li>
           <li class="nav-item " >
             <%= link_to 'Events', events_path,  class:"nav-link" %>
